# rustjerkbot

./: Cargo.toml  LICENSE  README.md
data/: data.sql  dump.sql  feed.yml  messages.yml  schedule.yml  schema.sql  shippering  shippering.liquid  shippering.yml
migrations/: V1__init.sql
src/: config.rs  context.rs  db.rs  dispatcher.rs  entities.rs  main.rs  scheduler.rs  sed.rs  sender.rs  shippering.rs  store.rs  syndication.rs  tracker.rs  user.rs  utils.rs
src/autoresponse/: message.rs  mod.rs
src/handler/: autoresponse.rs  feed.rs  ferris.rs  greetings.rs  mod.rs  schedule.rs  tracker.rs  user.rs
src/handler/shippering/: future.rs  handler.rs  mod.rs  state.rs
src/handler/text/: mod.rs  replace.rs
src/handler/text/transform/: arrow.rs  base.rs  chain.rs  cw.rs  huify.rs  mod.rs  reverse.rs  square.rs  star.rs
src/shippering/: future.rs  handler.rs  mod.rs  state.rs  template.rs  templates.rs
src/store/: db.rs  feed.rs  mod.rs  schedule.rs  shippering.rs
src/text/: mod.rs
src/text/transform/: cw.rs  huify.rs  mod.rs  reverse.rs
