[package]
name = "rustjerkbot"
version = "0.1.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"

[dependencies]
atom_syndication = "0.7.0"
bytes = "0.5.4"
carapax = { version = "0.5.0", features = ["access", "session-redis"] }
chrono = { version = "0.4.10", features = ["serde"] }
darkredis = "0.6.1"
dotenv = "0.15.0"
env_logger = "0.7.1"
envy = "0.4.1"
liquid = "0.19.0"
log = "0.4.8"
num_cpus = "1.11.1"
rand = "0.7.2"
regex = "1.3.1"
reqwest = "0.10.1"
rss = "1.8.0"
sedregex = "0.2.4"
serde = "1.0.104"
serde_json = "1.0.44"
tokio = { version = "0.2", default-features = false, features = ["macros", "sync", "time"] }
tokio-postgres = {version = "0.5.1", features = ["with-chrono-0_4"] }
